--- a/index.html
+++ b/index.html
@@ -6,93 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tourist Attractions</title>
 </head>
-<body class="p-8 bg-gray-100">
-    <div class="card flex flex-wrap gap-6 justify-center">
-
-        <div class="card-body w-64 flex flex-col items-center gap-4 border-2 border-gray-300 rounded-lg bg-white">
-            <img src="image.jpeg" alt="" class="w-64 rounded">
-            <div class="flex flex-col items-center gap-4 p-4">
-                <h1 class="text-2xl font-bold">Tourist Attraction 1</h1>
-                <p class="w-full text-gray-600">
-                    Description of Tourist Attraction. Pretty good place to visit.  
-                    Beach, sun, fun. Boats, water, sand.
-                </p>
-                <a href="#more-info" class="bg-gray-400 border-2  text-white py-2 px-4 text-center rounded w-full m-2 hover:bg-gray-500">
-                    Know more
-                </a>
-            </div>
-        </div>
-
-        <div class="card-body w-64 flex flex-col items-center gap-4 border-2 border-gray-300 rounded-lg bg-white">
-            <img src="image.jpeg" alt="" class="w-64 rounded">
-            <div class="flex flex-col items-center gap-4 p-4">
-                <h1 class="text-2xl font-bold">Tourist Attraction 2</h1>
-                <p class="w-full text-gray-600">
-                    Description of Tourist Attraction. Pretty good place to visit.  
-                    Beach, sun, fun. Boats, water, sand.
-                </p>
-                <a href="#more-info" class="bg-gray-400 border-2  text-white py-2 px-4 text-center rounded w-full m-2 hover:bg-gray-500">
-                    Know more
-                </a>
-            </div>
-        </div>
-
-        <div class="card-body w-64 flex flex-col items-center gap-4 border-2 border-gray-300 rounded-lg bg-white">
-            <img src="image.jpeg" alt="" class="w-64 rounded">
-            <div class="flex flex-col items-center gap-4 p-4">
-                <h1 class="text-2xl font-bold">Tourist Attraction 3</h1>
-                <p class="w-full text-gray-600">
-                    Description of Tourist Attraction. Pretty good place to visit.  
-                    Beach, sun, fun. Boats, water, sand.
-                </p>
-                <a href="#more-info" class="bg-gray-400 border-2  text-white py-2 px-4 text-center rounded w-full m-2 hover:bg-gray-500">
-                    Know more
-                </a>
-            </div>
-        </div>
-
-        <div class="card-body w-64 flex flex-col items-center gap-4 border-2 border-gray-300 rounded-lg bg-white">
-            <img src="image.jpeg" alt="" class="w-64 rounded">
-            <div class="flex flex-col items-center gap-4 p-4">
-                <h1 class="text-2xl font-bold">Tourist Attraction 4</h1>
-                <p class="w-full text-gray-600">
-                    Description of Tourist Attraction. Pretty good place to visit.  
-                    Beach, sun, fun. Boats, water, sand.
-                </p>
-                <a href="#more-info" class="bg-gray-400 border-2  text-white py-2 px-4 text-center rounded w-full m-2 hover:bg-gray-500">
-                    Know more
-                </a>
-            </div>
-        </div>
-
-        <div class="card-body w-64 flex flex-col items-center gap-4 border-2 border-gray-300 rounded-lg bg-white">
-            <img src="image.jpeg" alt="" class="w-64 rounded">
-            <div class="flex flex-col items-center gap-4 p-4">
-                <h1 class="text-2xl font-bold">Tourist Attraction 5</h1>
-                <p class="w-full text-gray-600">
-                    Description of Tourist Attraction. Pretty good place to visit.  
-                    Beach, sun, fun. Boats, water, sand.
-                </p>
-                <a href="#more-info" class="bg-gray-400 border-2  text-white py-2 px-4 text-center rounded w-full m-2 hover:bg-gray-500">
-                    Know more
-                </a>
-            </div>
-        </div>
-
-        <div class="card-body w-64 flex flex-col items-center gap-4 border-2 border-gray-300 rounded-lg bg-white">
-            <img src="image.jpeg" alt="" class="w-64 rounded">
-            <div class="flex flex-col items-center gap-4 p-4">
-                <h1 class="text-2xl font-bold">Tourist Attraction 6</h1>
-                <p class="w-full text-gray-600">
-                    Description of Tourist Attraction. Pretty good place to visit.  
-                    Beach, sun, fun. Boats, water, sand.
-                </p>
-                <a href="#more-info" class="bg-gray-400 border-2  text-white py-2 px-4 text-center rounded w-full m-2 hover:bg-gray-500">
-                    Know more
-                </a>
-            </div>
-        </div>
-
-    </div>
+<body>
+    
 </body>
 </html>
